@@ -189,6 +189,8 @@ int  init_network A_((unsigned int, void (*readfunc)()));
 void net_close A_((int));
 int  wait_request(time_t waittime, long *);
 void net_add_close_func A_((int, void(*)()));
+int get_max_num_descriptors(void);
+int get_fdset_size(void);
 
 
 struct connection
